<resources>
	<string name="app_name">Foothill Activities</string>
	<string name="tab_page_1">Statistics-Display1</string>
	<string name="tab_page_2">Statitics-Display2</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment1">Hello blank fragment1</string>
	<string name="hello_blank_fragment2">Hello blank fragment2</string>
	<string name="bike_tag"> +BIKES TAGGED</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="coyotes">+Coyotes</string>
	<string name="mountain_lions">+MOUNT LIONS</string>
	<string name="workindog">+WORKING DOGS</string>
	<string name="not_in_use">NOT IN USE</string>

</resources>
